[package]
name = "wgpuhelloworld"
version = "0.1.0"
authors = ["Hagsteel <me@hagsteel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.10"
winit = "0.23.0"
shaderc = "0.6.3"
cgmath = "0.17.0"
log = "0.4.11"
wgpu = "0.6.0"
futures = "0.3.7"
